--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,10 +29,9 @@
         <item>AIML</item>
         <item>Computer Science</item>
         <item>Civil</item>
-        <item>CS-IOT</item>
-        <item>CS-AIML</item>
+        <item>IOT</item>
         <item>Electronics and Communication</item>
-        <item>Mechectronics</item>
+        <item>Mechatronics</item>
         <item>Mechanical</item>
         <item>Information Science</item>
         <!-- Add more options -->
