Changed codes here

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -107,4 +107,13 @@
     <string name="sub1858">18**58L </string>
     <string name="sub1859">18**59 </string>
 
+    <string name="sub1861">18**61 </string>
+    <string name="sub1862">18**62 </string>
+    <string name="sub1863">18**63 </string>
+    <string name="sub1864">18**64X </string>
+    <string name="sub1865">18**65X </string>
+    <string name="sub1866">18**L66 </string>
+    <string name="sub1867">18**L67 </string>
+    <string name="sub1868">18**P68 </string>
+
 </resources>
