--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -116,4 +116,19 @@
     <string name="sub1867">18**L67 </string>
     <string name="sub1868">18**P68 </string>
 
+    <string name="sub1871">18**71 </string>
+    <string name="sub1872">18**72 </string>
+    <string name="sub1873">18**73X </string>
+    <string name="sub1874">18**74X </string>
+    <string name="sub1875">18**75X </string>
+    <string name="sub1876">18**76 </string>
+    <string name="sub1877">18**77 </string>
+    <string name="sub1878">18**78 </string>
+
+    <string name="sub1881">18**81 </string>
+    <string name="sub1882">18**82X </string>
+    <string name="sub1883">18**P83 </string>
+    <string name="sub1884">18**S84 </string>
+    <string name="sub1885">18**I85 </string>
+
 </resources>
