--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,4 +149,7 @@
     <string name="sub20207">22**207 </string>
     <string name="sub20208">22**258 </string>
 
+
+    <string name="select">Select Item</string>
+
 </resources>
