--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
+    <string name="result">RESULT</string>
     <string name="app_name">SGPA</string>
     <string name="MAT31">21MAT31</string>
     <string name="CS32">21**32 </string>
